--- a/style.css
+++ b/style.css
@@ -31,10 +31,10 @@ footer p {
 
 .social-icons a {
   margin: 0 10px;
-  color: rgb(255, 0, 0);
+  color: rgb(0, 13, 255);
   text-decoration: none;
 }
 
 .social-icons a:hover {
-  color: #1abc9c;
+  color: #ffffff;
 }
